--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "^2.3.1",
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
+    "@types/lodash": "^4.14.64",
     "angular2-materialize": "^15.0.2",
     "core-js": "^2.4.1",
     "g": "^2.0.1",
@@ -38,6 +39,7 @@
     "@angular/cli": "^1.0.3",
     "@angular/compiler-cli": "^2.3.1",
     "@types/jasmine": "2.5.38",
+    "@types/lodash": "^4.14.64",
     "@types/node": "^6.0.42",
     "codelyzer": "~2.0.0-beta.1",
     "jasmine-core": "2.5.2",
